--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
