--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "prismjs": "^1.17.1",
     "react": "16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "16.8.6",
